feat: add navigation to the UI. supporting references to the swagger API& edit swagger title & giving alias to a swagger file (for better searching)
