# src/swagger.yaml
@@ -42,8 +42,6 @@ paths:
       summary: Create Swagger
       description: Add swagger to the API-Catalog
       operationId: createSwagger
-      parameters:
-        - $ref: "#/components/parameters/XSwaggerFormat"
       requestBody:
         content:
           application/json:
@@ -91,8 +89,6 @@ paths:
       summary: Update Swagger
       description: Update a swagger in the API-Catalog
       operationId: updateSwagger
-      parameters:
-        - $ref: "#/components/parameters/XSwaggerFormat"
       requestBody:
         content:
           application/json:
@@ -128,17 +124,6 @@ paths:
           $ref: "#/components/responses/InternalServerError"
 
 components:
-  parameters:
-    XSwaggerFormat:
-      name: x-swagger-format
-      in: header
-      description: The swagger format
-      example: yaml
-      required: true
-      schema:
-        type: string
-        enum: ["yaml", "json"]
-
   responses:
     NoContent:
       description: No Content.
@@ -217,8 +202,28 @@ components:
       example: "2020-05-20T00:00:00Z"
       readOnly: true
 
-    SwaggerName:
-      description: "The swagger name"
+    SwaggerTitle:
+      description: "The swagger title"
+      type: string
+      minLength: 1
+      maxLength: 1000
+
+    SwaggerAliases:
+      description: "The swagger title"
+      type: array
+      items:
+        type: string
+        minLength: 1
+        maxLength: 20
+
+    SwaggerRepositoryUrl:
+      description: "The repository url contains the swagger file"
+      type: string
+      minLength: 1
+      maxLength: 1000
+
+    SwaggerSourceFilePath:
+      description: "The repository path to the swagger source file"
       type: string
       minLength: 1
       maxLength: 1000
@@ -231,40 +236,61 @@ components:
     SwaggerPostRequest:
       type: object
       required:
-        - name
+        - title
         - file_content
+        - repository_url
       additionalProperties: false
       properties:
-        name:
-          $ref: "#/components/schemas/SwaggerName"
+        title:
+          $ref: "#/components/schemas/SwaggerTitle"
+        aliases:
+          $ref: "#/components/schemas/SwaggerAliases"
         file_content:
           $ref: "#/components/schemas/SwaggerData"
+        repository_url:
+          $ref: "#/components/schemas/SwaggerRepositoryUrl"
+        file_source_path:
+          $ref: "#/components/schemas/SwaggerSourceFilePath"
 
     SwaggerPutRequest:
       type: object
       additionalProperties: false
       properties:
-        name:
-          $ref: "#/components/schemas/SwaggerName"
+        title:
+          $ref: "#/components/schemas/SwaggerTitle"
+        aliases:
+          $ref: "#/components/schemas/SwaggerAliases"
         file_content:
           $ref: "#/components/schemas/SwaggerData"
+        repository_url:
+          $ref: "#/components/schemas/SwaggerRepositoryUrl"
+        file_source_path:
+          $ref: "#/components/schemas/SwaggerSourceFilePath"
 
     SwaggerResource:
       type: object
       required:
         - id
-        - name
+        - title
         - file_content
+        - repository_url
+        - file_source_path
         - created_at
         - updated_at
       additionalProperties: false
       properties:
         id:
           $ref: "#/components/schemas/SwaggerId"
-        name:
-          $ref: "#/components/schemas/SwaggerName"
+        title:
+          $ref: "#/components/schemas/SwaggerTitle"
+        aliases:
+          $ref: "#/components/schemas/SwaggerAliases"
         file_content:
           $ref: "#/components/schemas/SwaggerData"
+        repository_url:
+          $ref: "#/components/schemas/SwaggerRepositoryUrl"
+        file_source_path:
+          $ref: "#/components/schemas/SwaggerSourceFilePath"
         created_at:
           $ref: "#/components/schemas/CreatedAt"
         updated_at:
